--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -5,6 +5,7 @@
 
 // icons
 @icon-size: 28px;
+@drawer-menu-icon-size: @icon-size / 2;
 @banner-logo-size: 70px;
 
 // Typography
@@ -45,6 +46,7 @@
 @separator: #dadada;
 @instruction: #70c041;
 @warning: #e22c09;
+@mobile-menu: #363636;
 
 @default-element: #919191;
 @default-element-pressed: darken(@default-element, 20%);
