--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -47,6 +47,7 @@
 @instruction: #70c041;
 @warning: #e22c09;
 @mobile-menu: #363636;
+@mobile-menu-pressed: lighten(@mobile-menu, 20%);
 
 @default-element: #919191;
 @default-element-pressed: darken(@default-element, 20%);
