--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -11,6 +11,13 @@ Fundamentals that affect the whole app.
   -webkit-box-sizing: border-box; 
   box-sizing: border-box; 
 
+  // Remove pressed element's gray background
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
+
+  // Disable showing popup during touch and hold a target in Safari
+  -webkit-touch-callout: none;
+
   // Default to no background repeat
   background-repeat: no-repeat;
 }
