--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -67,7 +67,7 @@ header {
   min-height: @page-header-height;
   .center-horizontally;
   position: relative;
-  #menu-button-wrapper {
+  #active-action-wrapper {
     background-color: white;
     float: left;
     text-align: right;
