--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -29,9 +29,9 @@
 @fixed-page-height: 500px;
 
 // Headers
-@main-header-height: 60px;
-@page-header-height: 60px;
+@page-header-height: 48px;
 @heading-header-height: 60px;
+@content-heading-height: 34px;
 
 // Footer
 @footer-height: 60px;
