--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -152,6 +152,7 @@ section#tasks-dates {
           li {
             display: table-cell;
             text-align: center;
+            vertical-align: middle;
             a {
               font-size: @small-font-size;
               width: 100%;
@@ -200,7 +201,7 @@ section#tasks-dates {
 
 // TODO: Move these to the right place!
 
-button.default-button{
+button.default-button {
   color: white;
   & {
     background-color: @default-button;
