--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -12,7 +12,7 @@ Fundamentals that affect the whole app.
   box-sizing: border-box; 
 
   // Remove pressed element's gray background
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
 
   // Disable showing popup during touch and hold a target in Safari
