Pull to refresh previous/next week in first/last date slide: * Register onResistanceBefore/onResistanceAfter Swiper callbacks. * MS Windows Phone touch event listeners in swiper container directive.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -128,6 +128,28 @@ section#tasks-dates {
   .date-heading {
     position: relative;
   }
+  .week-loader {
+    color: @default-element;
+    text-align: center;
+    line-height: 200px;
+    height: 200px;
+    width: 100%;
+  }
+  .previous-week-loader {
+    position: absolute;
+    top: -200px;
+    left: 0;
+  }
+  .next-week-loader {
+    content: "next week...";
+    bottom: -200px;
+    left: 0;
+  }
+  .swiper-wrapper::after {
+    display: block;
+    .week-loader;
+    .next-week-loader;
+  }
 }
 
 // TODO: Move these to the right place!
