--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -372,3 +372,27 @@ footer {
     }
   }
 }
+
+#wrapper {
+  overflow: hidden;
+  height: 100%;
+}
+
+#onboarding-scroller {
+  width: 300%;
+  height: 100%;
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  justify-content: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+}
