Set omnibar height at page header height.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -154,6 +154,7 @@ footer {
 #omnibar-wrapper {
   position: relative;
   .omnibar-visible {
+    height: @page-header-height;
     .left-input-wrapper;
     input {
       text-align: left !important;
