--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -43,24 +43,24 @@ Only universal code that would work by itself in any web page.
   border-right: 1px solid white;
 }
 .right-of-two {
-  float: right;
+  float: left;
   width: 50%;
 }
 
 // three in a row
 .left-of-three {
   float: left;
-  width: 33.33%;
+  width: 33%;
   border-right: 1px solid white;
 }
 .center-of-three {
   float: left;
-  width: 33.34%;
+  width: 34%;
   border-right: 1px solid white;
 }
 .right-of-three {
-  float: right;
-  width: 33.33%;
+  float: left;
+  width: 33%;
 }
 
 // four in a row
@@ -75,7 +75,7 @@ Only universal code that would work by itself in any web page.
   border-right: 1px solid white;
 }
 .right-of-four {
-  float: right;
+  float: left;
   width: 25%;
 }
 
@@ -187,8 +187,10 @@ Only universal code that would work by itself in any web page.
 .right-button-wrapper, .left-checkbox-wrapper { 
   line-height: 100%;
   button {
-    padding-top: 4px; // quick fix to center the plus button
-  }
+   // Quick fix to center the plus button
+   // NOTE! Tested with application font!
+   padding-top: 5px;
+ }
 }
 .left-checkbox-wrapper {
   width: @icon-button-width + 8px;
@@ -197,7 +199,7 @@ Only universal code that would work by itself in any web page.
 .right-button-wrapper {
   width: @icon-button-width + 8px;
   button {
-    padding-left: 8px;    
+    padding-left: 20px;
   }
 }
 
