Added Helvetica Neue Light fallback font for web from myfonts.com

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -100,7 +100,7 @@ header.page-header nav {
       height: @page-header-height;
     }
     a.today-link-active {
-      font-weight: 700;
+      .font-bold;
     }
 
     button#menu-button {
@@ -171,22 +171,22 @@ footer {
     .center-horizontally;
     input::-webkit-input-placeholder { /* WebKit browsers */
       font-size: @large-font-size;
-      font-weight: bold;
+      .font-bold;
       color: @highlighted-element;
     }
     input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
       font-size: @large-font-size;
-      font-weight: bold;
+      .font-bold;
       color: @highlighted-element;
     }
     input::-moz-placeholder { /* Mozilla Firefox 19+ */
       font-size: @large-font-size;
-      font-weight: bold;
+      .font-bold;
       color: @highlighted-element;
     }
     input:-ms-input-placeholder { /* Internet Explorer 10+ */
       font-size: @large-font-size;
-      font-weight: bold;
+      .font-bold;
       color: @highlighted-element;
     }
   }
@@ -209,7 +209,7 @@ footer {
 #menu-content {
   a, span {
     font-size: @small-font-size;
-    font-weight: 700;
+    .font-bold;
     margin-top: 2px;
   }
   a.feature-link {
