--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -22,6 +22,10 @@ Fundamentals that affect the whole app.
   background-repeat: no-repeat;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 html {
   // There is never any full page scrolling
   height: 100%;
@@ -48,7 +52,7 @@ a:active {
 // HEADINGS
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
+  .font-bold;
   margin: 0;
   color: @content-heading;
   line-height: normal;
@@ -57,6 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 h3 {
   min-height: @content-heading-height;
   a {
+    .font-bold;
     color: @content-heading;
   }
   a:active {
