--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -380,14 +380,7 @@ select {
 // SCROLLBARS
 
 ::-webkit-scrollbar {
-  width: 4px;
-  background: white;
-}
-::-webkit-scrollbar-thumb {
-  background: @default-button;
-}
-::-webkit-scrollbar-corner {
-  background: white;
+  display:none;
 }
 
 // Temporary classes (to be refactored)
