Added bold Helvetica Neue font

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -10,6 +10,8 @@
 
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+@font-bold: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLT-Roman', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+
 @large-font-size: 20px;
 @default-font-size: 18px; 
 @small-font-size: 15px; 
