--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -116,6 +116,10 @@ section#signup {
 #inbox-container {
   section#inbox {
     position: relative;
+    margin-top: -@page-header-height;
+    #inbox-page-content-container {
+      padding-bottom: @footer-height;
+    }
   }
   div#menu-content {
     padding-top: 0;
