--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -487,9 +487,18 @@ a.content:active {
 
 // MODALS
 
+.modal-body {
+  overflow-y: scroll;
+}
+
 .small-modal {
   .modal-dialog {
     max-width: @max-modal-width;
+    width: 90%;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
   }
 }
 
