Set heading header height to same as page header. Better layout for omnibar results.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -206,6 +206,9 @@ footer {
       height: 100%;
       // width set with javascript
     }
+    .filtered-items {
+      padding-top: @vertical-grid-half;
+    }
   }
 }
 
