--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -102,7 +102,7 @@ header {
   text-align: center;
   min-height: @heading-header-height;
   h3 {
-    padding-top: 10px; 
+    padding-top: 18px; 
   }
 }
 
@@ -136,7 +136,7 @@ header {
 
 .simple-content-container {
   height: inherit;
-  padding-bottom: @heading-header-height + 10px;
+  padding-bottom: @heading-header-height + @vertical-grid-half;
   overflow-y: auto;
 }
 
