Moved inbox and unsorted content up to match other headings

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -134,6 +134,10 @@ header {
   }
 }
 
+.no-heading-content-container {
+  padding-top: 3px;
+}
+
 .simple-content-container {
   height: inherit;
   padding-bottom: @heading-header-height + @vertical-grid-half;
