Aligned menu's non-feature link ot grid.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -245,6 +245,11 @@ footer {
       }
     }
   }
+  li#my, li#collectives {
+    a.active {
+      margin-left: -16px;
+    }
+  }
 }
 
 // desktop
